--- a/static/index.html
+++ b/static/index.html
@@ -28,7 +28,9 @@
 				<input type=submit>
 			</form>
 		</div>
+		<a class="github-fork-ribbon" href="https://github.com/alyssadev/ttmp4" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
 	</body>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
 	<script>
 	(function() {
 		input(document.getElementById("url"))
